--- a/app/views/relation/mini.scala.html
+++ b/app/views/relation/mini.scala.html
@@ -1,21 +1,91 @@
-@(userId: String, blocked: Boolean, followable: Boolean, relation: Option[lila.relation.Relation] = None)(implicit ctx: Context)
+@(userId: String, blocked: Boolean, followable: Boolean, relation: Option[lila.relation.Relation] = None, makeFriend: Option[lila.relation.Relation] = None, friend: Option[lila.relation.Relation] = None, isSelf: Boolean = false, nbFollower : Int = 0, nbFriends: Int = 0)(implicit ctx: Context)
 
-@relation match {
-	case None if followable && !blocked=> {
-		<a class="relation button" href="@routes.Relation.follow(userId)?mini=1">
-			<span data-icon="h">&nbsp;@trans.follow()</span>
-		</a>
-	}
-	case Some(true) => {
-		<a class="relation button hint--bottom" data-hint="@trans.unfollow()" href="@routes.Relation.unfollow(userId)?mini=1">
-			<span data-icon="h">&nbsp;@trans.following()</span>
-		</a>
-	}
-	case Some(false) => {
-		<a class="relation button hint--bottom" data-hint="@trans.unblock()" class="hover_text" href="@routes.Relation.unblock(userId)?mini=1">
-			<span data-icon="k">&nbsp;@trans.blocked()</span>
-		</a>
-	}
-	case _ => {
-	}
+@if(!isSelf) {
+
+  @relation match {
+    case None if followable && !blocked => {
+      @*<a class="ui label relation button hint--bottom hover_text" href="@routes.Relation.follow(userId)?mini=1">*@
+      @*<i class="thumbs outline up icon"></i>*@
+      @*Follow*@
+      @*</a>*@
+      <a class="tiny ui  basic animated relation button hint--bottom hover_text" tabindex="0" href="@routes.Relation.follow(userId)?mini=1">
+        <span class="visible content">@nbFollower Follower</span>
+        <span class="hidden content">
+          <i class="thumbs outline up icon"></i>
+          Follow
+        </span>
+      </a>
+    }
+    case Some(true) => {
+      @*<a class="ui label relation button hint--bottom hover_text" href="@routes.Relation.unfollow(userId)?mini=1">*@
+      @*<i class="thumbs up icon"></i>*@
+      @*Following*@
+      @*</a>*@
+      <a class="tiny ui blue basic animated relation button hint--bottom hover_text" tabindex="0" href="@routes.Relation.unfollow(userId)?mini=1">
+        <span class="visible content">@nbFollower Follower</span>
+        <span class="hidden content">
+          <i class="thumbs up icon"></i>
+          Following
+        </span>
+      </a>
+    }
+    case Some(false) => {
+      <a class="relation button hint--bottom" data-hint="@trans.unblock()" class="hover_text" href="@routes.Relation.unblock(userId)?mini=1">
+        <span data-icon="k">&nbsp; @trans.blocked()</span>
+      </a>
+    }
+    case _ => {
+    }
+  }
+
+  @friend match {
+
+    case None if followable && !blocked => {
+      @makeFriend match {
+        case None if followable && !blocked => {
+          <a class="tiny ui  basic animated relation button hint--bottom hover_text" tabindex="0" href="@routes.Relation.request(userId)?mini=1">
+            <span class="visible content">@nbFriends Friends</span>
+            <span class="hidden content">
+              <i class="thumbs up icon"></i>
+              Add Friend
+            </span>
+          </a>
+        }
+        case Some(true) => {
+          <a class="tiny ui olive basic animated relation button hint--bottom hover_text" tabindex="0" href="@routes.Relation.unrequest(userId)?mini=1">
+            <span class="visible content">@nbFriends Friends</span>
+            <span class="hidden content">
+              <i class="thumbs up icon"></i>
+              Cancel Request
+            </span>
+          </a>
+        }
+        case _ => {
+        }
+      }
+    }
+
+    case Some(true) => {
+      <a class="tiny ui blue basic animated relation button hint--bottom hover_text" tabindex="0" href="@routes.Relation.unrequest(userId)?mini=1">
+        <span class="visible content">@nbFriends Friends</span>
+        <span class="hidden content">
+          <i class="remove user icon"></i>
+          Unfriend
+        </span>
+      </a>
+    }
+
+    case _ => {
+    }
+  }
+
+
+} else {
+  <a class="tiny ui  basic  relation button hint--bottom hover_text" tabindex="0" href="#">
+    <span class="content">100 Folowers</span>
+  </a>
+  <a class="tiny ui  basic  relation button hint--bottom hover_text" tabindex="0" href="#">
+    <span class="content">@nbFriends Friends</span>
+  </a>
+
 }
