--- a/front_end/scss/style.scss
+++ b/front_end/scss/style.scss
@@ -850,32 +850,34 @@ textarea {
 .head-user{
   width: 100%;
   height: 250px;
-  background-image: -owg(linear-gradient(to bottom, #36aded, #2183e3));
-  background-image: -webkit(linear-gradient(to bottom, #36aded, #2183e3));
-  background-image: -moz(linear-gradient(to bottom, #36aded, #2183e3));
-  background-image: -o(linear-gradient(to bottom, #36aded, #2183e3));
-  background-image: linear-gradient(to bottom, #36aded, #2183e3);
-  background-color: #36aded;
-  border-bottom: 1px solid #2993cf;
+
   padding: 0 !important;
   margin: 0 !important;
+
+  .relation_actions{
+    > a.custom {
+      min-width: 150px;
+      border-color: transparent !important;
+    }
+  }
 }
 
 .avatarWr {
+  background: white !important;
   padding: 0px !important;
   width: 190px;
   height: 190px;
-  border: 5px solid #fff !important;
+  //border: 5px solid #fff !important;
   border-radius: 5px;
   margin: 15px auto 0 auto !important;
+  img{
+    margin-top: 4px;
+    margin-left: 4px;
+  }
 }
 
 .head-user .buttonWr {
   margin-top: 7px;
-}
-
-.head-user h2 {
-  color: white !important;
 }
 
 .head-user .edit {
@@ -912,7 +914,7 @@ textarea {
   .infoWr{
     .relation_actions{
       a {
-        color: white !important;
+        //color: white !important;
         font-weight: bold !important;
       }
     }
@@ -962,7 +964,7 @@ textarea {
 
 .avatar {
   img{
-    border: 1px solid #ddd;
+    border: 1px solid $blue;
   }
 }
 
@@ -971,7 +973,7 @@ textarea {
     font-size: 18px;
     line-height: 32px;
     margin-right: 20px;
-    color: white;
+    //color: white;
     //font-family: Georgia,Times,"Times New Roman",serif;
   }
   input {
