--- a/app/views/relation/mini.scala.html
+++ b/app/views/relation/mini.scala.html
@@ -83,11 +83,18 @@
 
 
 } else {
-  <a class="tiny ui  basic  relation button hint--bottom hover_text custom" tabindex="0" href="#">
-    <span class="content">@nbFollower Folowers</span>
+  <a class="tiny ui  basic animated  relation button hint--bottom hover_text custom" tabindex="0" href="#">
+    <span class="visible content">@nbFollower Folowers</span>
+    <span class="hidden content">
+      View Followers
+    </span>
   </a>
-  <a class="tiny ui  basic  relation button hint--bottom hover_text custom" tabindex="0" href="#">
-    <span class="content">@nbFriends Friends</span>
+
+  <a class="tiny ui  basic animated relation button hint--bottom hover_text custom" tabindex="0" href="#">
+    <span class="visible content">@nbFriends Friends</span>
+    <span class="hidden content">
+      View Friends
+    </span>
   </a>
 
 }
