--- a/front_end/scss/style.scss
+++ b/front_end/scss/style.scss
@@ -1025,9 +1025,8 @@ textarea {
 
   .content-post {
     min-height: 30px;
-    word-wrap: break-word;
-    white-space: pre-wrap;
-
+    //word-wrap: break-word;
+    //white-space: pre-wrap;
   }
 
   .extra-post {
