--- a/app/views/index/home.scala.html
+++ b/app/views/index/home.scala.html
@@ -6,6 +6,7 @@
 		<meta name="fragment" content="!">
 		<meta charset="UTF-8">
 		<link rel="dns-prefetch" href="static.luanlv.info">
+		<link rel="shortcut icon" href="@routes.Assets.at("favicon.ico")">
 		<title>Demo</title>
 		@views.html.index.other.headjs()
 		@views.html.index.other.spinner()
