--- a/front_end/scss/style.scss
+++ b/front_end/scss/style.scss
@@ -193,7 +193,7 @@ textarea:focus:-ms-input-placeholder { color:transparent!important; } /* IE 10+ 
 
 .chat-right, .chat-left{
   margin-bottom: 3px !important;
-  width: 215px;
+  width: 210px;
   .mes {
     font-weight: normal !important;
     font-size: 13px !important;
@@ -227,22 +227,67 @@ textarea {
   resize: none !important;
 }
 
+#user-list{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  position: fixed;
+  bottom: 0;
+
+  width: 170px;
+  height: calc(100vh - 38px);
+  .header {
+    font-family: 'Open Sans', sans-serif, Arial, Helvetica !important;
+  }
+  .ulptr {
+    padding-top: 0px !important;
+    //padding-bottom: 10px !important;
+  }
+}
+
+.user-show {
+  left: 0px;
+  transition: left 0.4s;
+}
+
+.user-hide {
+  left: -175px;
+  transition: left 0.2s;
+}
+
+#dock-left{
+  width: 5px;
+  height: calc(100vh - 44px);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+.uShow {
+  left: 175px;
+  transition: left 0.4s;
+}
+.uHide {
+  left: 5px;
+  transition: left 0.2s;
+}
+
 #dock-bot{
   position: fixed;
   height: 24px;
   padding: 0;
-  left: auto;
+  right: auto;
   line-height: 16px;
-  right: 195px;
   text-align: left;
   bottom: 0;
 }
+
 
 .chatWr{
   position: relative;
   height: 28px;
   margin-right: 10px;
-  float: right;
+  float: left;
 }
 .w1{
   width: 260px;
@@ -303,23 +348,7 @@ textarea {
 }
 
 
-#user-list{
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  max-height: calc(100% - 47px);
-  position: fixed;
-  bottom: 0;
-  right: 5px;
-  width: 190px;
-  .header {
-    font-family: 'Open Sans', sans-serif, Arial, Helvetica !important;
-  }
-  .ulptr {
-    padding-top: 0px !important;
-    //padding-bottom: 10px !important;
-  }
-}
+
 
 .title-user-list{
   background: lightblue;
@@ -511,6 +540,10 @@ textarea {
 
 #search{
   width: 400px;
+}
+
+.mar0{
+  margin: 0!important;
 }
 
 .mar0{
@@ -1125,7 +1158,8 @@ textarea {
     }
     .comment {
       margin-left: 10px;
-      font-size: 14px;
+      font-size: 13px;
+      color: #333;
       word-wrap:break-word;
       a {
         color: #0077CC !important;
